# jsheedy.github.io

./: PERFORMANCE_ANALYSIS.md  README.md  VERLET_IMPLEMENTATION_PLAN.md  index.html
experiments/: CLAUDE.md  MIGRATION_SUMMARY.md  barnes-hut-galaxy.html  bezier.html  boids.html  collide-o-scope.html  delaunay-triangulation.html  dijkstra.html  dla.html  fft-audio-visualizer.html  fourier-epicycles.html  index.html  kd-tree-nearest-neighbor.html  marching-squares.html  pathfinding.html  perlin-noise.html  quadtree-viewer.html  quadtree.html  ray-marching.html  runge-kutta-explorer.html  sorting-algorithms.html  terminal-theme.css  test-trees.html  trees.html  verlet-soft-body.html  voronoi.html  zorder-grid.html  zorder-spatial-query.html  zorder.html
experiments/collide-o-scope-rs/: .gitignore  README.md  index.html  settings-persistence.js
experiments/js/: canvas-utils.js  spatial-partitioning.js  vector-math.js
experiments/projects/: 01-voronoi-diagrams.md  02-perlin-simplex-noise.md  03-fft-audio-visualizer.md  04-marching-squares.md  05-delaunay-triangulation.md  06-kd-tree-nearest-neighbor.md  07-barnes-hut-galaxy.md  08-astar-pathfinding.md  09-reaction-diffusion.md  10-verlet-soft-body.md  11-ray-marching-sdf.md  12-fourier-epicycles.md  13-game-of-life-hashlife.md  14-differential-growth.md  15-diffusion-limited-aggregation.md  (+22 more)
experiments/webgpu/sphere/: Cargo.toml  README.md  TODO.md  index.html
experiments/webgpu/sphere/src/: camera.rs  lib.rs  renderer.rs  shader.wgsl  sphere.rs
resume/: README.md  build  index.html  resume.json  resume.md
(+7 files in other folders)
