[package]
name = "webgpu-sphere"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "0.19", features = ["webgl"] }
bytemuck = { version = "1.16", features = ["derive"] }
cgmath = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "console",
    "WebGl2RenderingContext",
]}
js-sys = "0.3"

[profile.release]
lto = true
opt-level = "s"
